# NoLeak

./: README.md  pyproject.toml  requirements.txt  setup.py
examples/: README.md  fake_config.env  fake_config.yaml  fake_dockerfile  fake_leaks.py
noleak/: __init__.py
noleak/cli/: __init__.py  main.py
noleak/config/: __init__.py  settings.py
noleak/core/: __init__.py  file_loader.py  matcher.py  scanner.py
noleak/output/: __init__.py  console.py  formatter.py  json_export.py  rich_console.py
noleak/rules/: __init__.py  builtins.py  loader.py
noleak/utils/: __init__.py  path_tools.py
